--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ a{
     display: flex;
     width: 100%;
     height: 30vh;
-    position: absolute;
+    position: relative;
     bottom: 0;
     left: 0;
 }
