--- a/css/style.css
+++ b/css/style.css
@@ -24,15 +24,20 @@ header{
     top: 0;
     left: 0;
     z-index: 1000;
+    width: 100%;
 }
 
-nav{
+.nav_full{
     display: flex;
     justify-content: start;
     align-items: center;
     width: 100%;
     height: 16vh;
     padding: 0 7%;
+}
+
+#nav_mobile{
+    display: none;
 }
 
 ul{
@@ -51,7 +56,11 @@ li{
     cursor: pointer;
 }
 
-ul > li:nth-child(1){
+li > a{
+    letter-spacing: normal;
+}
+
+.nav_full ul > li:nth-child(1){
     padding-right: 18%;
 }
 
@@ -76,6 +85,7 @@ section{
     display: flex;
     width: 100%;
     height: 70vh;
+    position: relative;
 }
 
 .container-img{
@@ -183,6 +193,10 @@ h2{
     width: 100%;
 }
 
+.black-boxs-small{
+    display: none;
+}
+
 .black-box1{
     background-color: black;
     width: 12.5%;
@@ -209,20 +223,11 @@ h2{
 }
 
 /* Carouselle */
-#carouselle{
+#carousel{
     display: flex;
-    position: absolute;
+    position: relative;
     top: 0;
     width: 300%;
     height: 70vh;
 }
-
-.page2{
-    left: -100%;
-}
-
-.page3{
-    left: -200%;
-}
-
 
